--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/xml": "^1.0.3",
     "app-root-path": "^2.1.0",
     "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.6.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "css-loader": "^5.0.0",
@@ -40,6 +44,7 @@
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
     "react": "^16.8.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^16.8.2",
     "react-router-dom": "^5.0.1",
     "sass": "^1.27.1",
@@ -51,10 +56,11 @@
     "webpack-cli": "3.3.5"
   },
   "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
+    "concurrently": "^5.3.0",
+    "file-loader": "^6.2.0",
     "nodemon": "^1.12.1",
     "sequelize-cli": "^5.4.0",
-    "webpack-dev-server": "^3.11.0",
-    "concurrently": "^5.3.0",
-    "case-sensitive-paths-webpack-plugin": "^2.3.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
