--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^16.8.2",
     "react-router-dom": "^5.0.1",
+    "react-simple-star-rating": "^1.0.6",
+    "react-star-rating-component": "^1.4.1",
+    "react-star-ratings": "^2.3.0",
     "sass": "^1.27.1",
     "sass-loader": "^10.0.4",
     "serve-favicon": "2.4.5",
